migrate to Java 21: apply OpenRewrite recipe UpgradeToJava21